# expert_verify_engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/plans/: implementation_plan_v6.md
example_candidate_descriptions/: honest_high_school_grad.txt
example_role_descriptions/: arithmetic_operations.txt  basic_science.txt  english_to_french.txt  reading_comprehension.txt  us_geography.txt
expert_verify_engine/: pyproject.toml
expert_verify_engine/agent/: decision.py  policy.py
expert_verify_engine/app/: config.py  main.py
expert_verify_engine/audit_log/: belief_logger.py  conversation.py  llm_logger.py  trajectory.py
expert_verify_engine/belief/: __init__.py  belief_state.py  decision_stats.py  stopping.py  updater.py
expert_verify_engine/data/examples/: senior_ml_engineer.txt
expert_verify_engine/llm/: client.py
expert_verify_engine/llm/prompts/: action.py  competence.py  explanation.py  loader.py
expert_verify_engine/llm/prompts/professional/: __init__.py  action.py  candidate.py  observation.py
expert_verify_engine/llm/prompts/student/: __init__.py  action.py  candidate.py  competence.py  explanation.py  observation.py
expert_verify_engine/models/: candidate.py  competence.py  generators.py  schemas.py
expert_verify_engine/observation/: evaluator.py  evidence.py
expert_verify_engine/tests/: test_belief.py
expert_verify_engine/utils/: parsing.py  retry.py
specs/: challenge.md
specs/plans/: implementation_plan.md
specs/system_specs/: system_spec_v4.md  system_spec_v5.md  system_spec_v6.md
specs/system_specs/theses/: also_read_this.md  thesis_v2.md
